--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,13 @@
 	<groupId>org.bioinfo</groupId>
 	<artifactId>bioinfo-formats</artifactId>
 	<version>0.3.0</version>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.bioinfo</groupId>
 			<artifactId>bioinfo-commons</artifactId>
 			<version>0.10.0</version>
 		</dependency>
-		<!-- <dependency> <groupId>paxtools</groupId> <artifactId>paxtools</artifactId> 
-			<version>1.0b1</version> </dependency> <dependency> <groupId>sax</groupId> 
-			<artifactId>sax</artifactId> <version>2.0.1</version> </dependency>
-			<dependency>
-			<groupId>org.jdom</groupId>
-			<artifactId>jdom</artifactId>
-			<version>1.1</version>
-		</dependency> -->
 		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
@@ -26,13 +19,23 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
+			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 	<build>
 		<sourceDirectory>src/main</sourceDirectory>
 		<testSourceDirectory>src/test</testSourceDirectory>
+
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>1.0-beta-7</version>
+			</extension>
+		</extensions>
+
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -48,17 +51,18 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.4.3</version>
+				<version>2.5</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
 	<distributionManagement>
 		<repository>
 			<id>default</id>
-			<name>MyCo External Repository</name>
+			<name>Bioinfo Repository</name>
 			<url>scp://repos/var/local/commons/repository</url>
 		</repository>
 	</distributionManagement>
