--- a/pom.xml
+++ b/pom.xml
@@ -64,14 +64,27 @@
 			</plugin>
 		</plugins>
 	</build>
-
-        <distributionManagement>
-                <repository>
-                        <id>default</id>
-                        <name>Bioinfo Repository</name>
-<!--                        <url>http://repos.bioinfo.cipf.es/maven2/</url> -->
-                        <url>scp://repos/var/www/gitorious/public/maven2</url>
-                </repository>
-        </distributionManagement>
+	<repositories>
+		<repository>
+			<id>maven2-repository.dev.java.net</id>
+			<name>Java.net Repository for Maven</name>
+			<url>http://download.java.net/maven/2/</url>
+			<layout>default</layout>
+		</repository>
+		<repository>
+			<id>BioinfoSDK</id>
+			<name>Repository for Bioinfo SDK builds</name>
+			<url>http://repos.bioinfo.cipf.es/maven2</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
+	<distributionManagement>
+		<repository>
+			<id>default</id>
+			<name>Bioinfo Repository</name>
+			<!-- <url>http://repos.bioinfo.cipf.es/maven2/</url> -->
+			<url>scp://repos/var/www/gitorious/public/maven2</url>
+		</repository>
+	</distributionManagement>
 
 </project>
